a1.02（头部制作——导航的a标签一鼠标停留出现下边框）

--- a/study/style.css
+++ b/study/style.css
@@ -40,3 +40,7 @@ body {
 	line-height: 40px;
 	text-decoration: none;
 }
+/*鼠标经过链接 才有底边框*/
+.nav ul li a:hover {
+	border-bottom: 2px solid #00a4ff;
+}
