--- a/study/style.css
+++ b/study/style.css
@@ -37,6 +37,7 @@ body {
 	display: block;
 	height: 40px;
 	padding: 0 9px;
+	margin-right: 24px;
 	line-height: 40px;
 	font-size: 18px;
 	color: #050505;
