a1.12（banner制作-左侧导航栏框子）

--- a/study/style.css
+++ b/study/style.css
@@ -82,4 +82,9 @@ body {
 	height: 420px;
 	background: #1c036c url(images/banner2.jpg) no-repeat top center;
 }
+.subnav {
+	width: 190px;
+	height: 420px;
+	background-color: pink;
+}
 /*banner end*/
