a1.15（banner制作-左侧导航栏中的内容完成）

--- a/study/style.css
+++ b/study/style.css
@@ -89,4 +89,19 @@ body {
 	/*背景半透明*/
 	background: rgba(0, 0, 0, .3);
 }
+.subnav li {
+	height: 45px;
+	line-height: 45px;
+}
+.subnav li a {
+	color: #fff;
+	font-size: 14px;
+	text-decoration: none;
+}
+.subnav li a:hover {
+	color: #00b4ff;
+}
+.subnav  span {
+	float: right;
+}
 /*banner end*/
