--- a/study/style.css
+++ b/study/style.css
@@ -83,6 +83,7 @@ body {
 	background: #1c036c url(images/banner2.jpg) no-repeat top center;
 }
 .subnav {
+	float: left;
 	width: 150px;
 	height: 420px;
 	padding: 0 20px;
@@ -103,5 +104,12 @@ body {
 }
 .subnav  span {
 	float: right;
+}
+.course {
+	/*float: right;*/
+	width: 228px;
+	height: 300px;
+	background-color: pink;
+	margin-top: 50px;
 }
 /*banner end*/
