--- a/study/style.css
+++ b/study/style.css
@@ -106,10 +106,14 @@ body {
 	float: right;
 }
 .course {
-	/*float: right;*/
+	float: right;
 	width: 228px;
 	height: 300px;
 	background-color: pink;
 	margin-top: 50px;
+}
+.course-hd {
+	height: 48px;
+	background-color: #9bceea;
 }
 /*banner end*/
