--- a/study/style.css
+++ b/study/style.css
@@ -131,5 +131,14 @@ body {
 	/*行高等与高度 只能让单行文本垂直居中*/
 	height: 50px;
 	border-bottom: 1px solid #ccc;
+	margin-top: 13px;
+}
+.course-bd li h4 {
+	font-size: 16px;
+	color: #4e4e4e;
+}
+.course-bd li p {
+	font-size: 12px;
+	color: #a5a5a5;
 }
 /*banner end*/
