--- a/study/style.css
+++ b/study/style.css
@@ -127,6 +127,11 @@ body {
 	/*没有宽度的盒子 padding 不会撑开盒子*/
 	padding: 0 14px;
 }
+.course-bd ul {
+	/*外边距塌陷的问题
+	margin-top: 6px;*/
+	padding-top: 6px;
+}
 .course-bd li {
 	/*行高等与高度 只能让单行文本垂直居中*/
 	height: 50px;
