--- a/study/style.css
+++ b/study/style.css
@@ -146,4 +146,9 @@ body {
 	font-size: 12px;
 	color: #a5a5a5;
 }
+.all {
+	display: block;
+	height: 38px;
+	border: 1px solid #00a4ff;
+}
 /*banner end*/
