--- a/study/style.css
+++ b/study/style.css
@@ -15,6 +15,9 @@ button {
 body {
 	background-color: #f3f5f7;
 }
+a {
+	text-decoration: none;
+}
 /*版心 12000 水平居中*/
 .w {
 	width: 1200px;
@@ -150,5 +153,10 @@ body {
 	display: block;
 	height: 38px;
 	border: 1px solid #00a4ff;
+	margin-top: 5px;
+	font-size: 16px;
+	color:  #00a4ff;
+	text-align: center;
+	line-height: 38px;
 }
 /*banner end*/
