--- a/study/style.css
+++ b/study/style.css
@@ -164,3 +164,11 @@ a {
 	color: #fff;
 }
 /*banner end*/
+/*goods start*/
+.goods {
+	height: 60px;
+	background-color: pink;
+	margin-top: 8px;
+	box-shadow: 2px 2px 2px rgba(0, 0, 0, .2);
+}
+/*goods end*/
