--- a/study/style.css
+++ b/study/style.css
@@ -169,6 +169,15 @@ a {
 	height: 60px;
 	background-color: pink;
 	margin-top: 8px;
+	/*利用行高可以继承的特性*/
+	line-height: 60px;
 	box-shadow: 2px 2px 2px rgba(0, 0, 0, .2);
+}
+.goods h3 {
+	float: left;
+	margin: 0 30px;
+	font-size: 16px;
+	color: #00a4ff;
+
 }
 /*goods end*/
