a1.30（精品推荐小模块-完成2号盒子）

--- a/study/style.css
+++ b/study/style.css
@@ -180,4 +180,13 @@ a {
 	color: #00a4ff;
 
 }
+.goods-item {
+	float: left;
+	color: #bfbfbf;
+}
+.goods-item a {
+	font-size: 16px;
+	color: #050505;
+	margin: 0 30px;
+}
 /*goods end*/
