--- a/study/style.css
+++ b/study/style.css
@@ -167,7 +167,7 @@ a {
 /*goods start*/
 .goods {
 	height: 60px;
-	background-color: pink;
+	background-color: #fff;
 	margin-top: 8px;
 	/*利用行高可以继承的特性*/
 	line-height: 60px;
@@ -188,5 +188,11 @@ a {
 	font-size: 16px;
 	color: #050505;
 	margin: 0 30px;
+}
+.mod {
+	float: right;
+	margin-right: 26px;
+	font-size: 14px;
+	color: #00a4ff;
 }
 /*goods end*/
