a1.32（精品推荐大模块-完成1号盒子）

--- a/study/style.css
+++ b/study/style.css
@@ -196,3 +196,13 @@ a {
 	color: #00a4ff;
 }
 /*goods end*/
+/*box start*/
+.box {
+	margin-top: 15px;
+}
+.box-hd {
+	height: 60px;
+	line-height: 60px;
+	background-color: pink;
+}
+/*box end */
