a1.33（精品推荐大模块-完成2号盒子）

--- a/study/style.css
+++ b/study/style.css
@@ -203,6 +203,19 @@ a {
 .box-hd {
 	height: 60px;
 	line-height: 60px;
-	background-color: pink;
+	/*background-color: pink;*/
+}
+.box-hd h3 {
+	float: left;
+	font-size: 20px;
+	color: #494949;
+	/*让粗体不加粗 400 == normal*/
+	font-weight: 400;
+}
+.box-hd a {
+	float: right;
+	margin-right: 30px;
+	font-size: 12px;
+	color: #a5a5a5;
 }
 /*box end */
