--- a/study/style.css
+++ b/study/style.css
@@ -14,6 +14,8 @@ button {
 }
 body {
 	background-color: #f3f5f7;
+	/*方便写代码 一会别忘了删除*/
+	height: 3000px;
 }
 a {
 	text-decoration: none;
@@ -217,5 +219,12 @@ a {
 	margin-right: 30px;
 	font-size: 12px;
 	color: #a5a5a5;
+}
+.box-bd {
+}
+.box-bd li {
+	width: 228px;
+	height: 270px;
+	background-color: pink;
 }
 /*box end */
