--- a/study/style.css
+++ b/study/style.css
@@ -223,8 +223,10 @@ a {
 .box-bd {
 }
 .box-bd li {
+	float: left;
 	width: 228px;
 	height: 270px;
+	margin-right: 15px;
 	background-color: pink;
 }
 /*box end */
