--- a/study/style.css
+++ b/study/style.css
@@ -229,6 +229,25 @@ a {
 	width: 228px;
 	height: 270px;
 	margin-right: 15px;
-	background-color: pink;
+	margin-bottom: 15px;
+	background-color: #ffffff;
+	box-shadow: 2px 2px 2px rgba(0, 0, 0, .3);
+}
+.box-bd li img {
+	width: 100%;
+}
+.box-bd li h4 {
+	margin: 20px;
+	font-size: 14px;
+	color: #050505;
+	font-weight: 400;
+}
+.box-bd li p {
+	margin: 0 20px;
+	font-size: 12px;
+	color: #999;
+}
+.box-bd p span {
+	color: orange;
 }
 /*box end */
