--- a/study/style.css
+++ b/study/style.css
@@ -269,3 +269,18 @@ a {
 	padding-top: 33px;
 	background-color: pink;
 }
+.copyright p {
+	font-size: 12px;
+	color: #666;
+	margin: 25px 0 15px 0;
+}
+.app {
+	display: block;
+	width: 118px;
+	height: 34px;
+	border: 1px solid #00a4ff;
+	text-align: center;
+	line-height: 34px;
+	font-size: 16px;
+	color: #00a4ff;
+}
