a2.50（携程网首页案例——搜索栏布局2）

--- a/h5+c3（2）/携程网首页案例制作/css/index.css
+++ b/h5+c3（2）/携程网首页案例制作/css/index.css
@@ -11,6 +11,7 @@ body {
 
 /*搜索模块*/
 .search-index {
+    display: flex;
     position: fixed;
     top: 0;
     left: 50%;
@@ -21,4 +22,14 @@ body {
     min-width: 320px;
     height: 44px;
     background-color: pink;
+}
+
+.search {
+    flex: 1;
+}
+
+.user {
+    width: 44px;
+    height: 44px;
+    background-color: orangered;
 }
