a2.52（携程网首页案例——完成搜索栏右边模块）

--- a/h5+c3（2）/携程网首页案例制作/css/index.css
+++ b/h5+c3（2）/携程网首页案例制作/css/index.css
@@ -9,6 +9,10 @@ body {
     -webkit-tap-highlight-color: transparent;
 }
 
+a {
+    text-decoration: none;
+}
+
 /*搜索模块*/
 .search-index {
     display: flex;
@@ -32,6 +36,9 @@ body {
     width: 44px;
     height: 44px;
     background-color: orangered;
+    font-size: 12px;
+    text-align: center;
+    color: #2eaae0;
 }
 
 .user::before {
@@ -41,4 +48,6 @@ body {
     height: 23px;
     background: url(../images/sprite.png) no-repeat -59px -194px;
     background-size: 104px auto;
+    /*上 左右 下*/
+    margin: 4px auto 0;
 }
