a2.53（携程网首页案例——完成搜索栏右边模块）

--- a/h5+c3（2）/携程网首页案例制作/css/index.css
+++ b/h5+c3（2）/携程网首页案例制作/css/index.css
@@ -13,6 +13,10 @@ a {
     text-decoration: none;
 }
 
+div {
+    box-sizing: border-box;
+}
+
 /*搜索模块*/
 .search-index {
     display: flex;
@@ -25,17 +29,19 @@ a {
     max-width: 540px;
     min-width: 320px;
     height: 44px;
-    background-color: pink;
 }
 
 .search {
+    height: 26px;
+    border: 1px solid #ccc;
     flex: 1;
+    margin: 6px 10px;
+    border-redius: 5px;
 }
 
 .user {
     width: 44px;
     height: 44px;
-    background-color: orangered;
     font-size: 12px;
     text-align: center;
     color: #2eaae0;
