a2.54（携程网首页案例——完成搜索栏中的放大镜图标）

--- a/h5+c3（2）/携程网首页案例制作/css/index.css
+++ b/h5+c3（2）/携程网首页案例制作/css/index.css
@@ -39,6 +39,16 @@ div {
     border-redius: 5px;
 }
 
+.search::before {
+    content: "";
+    display: block;
+    width: 15px;
+    height: 15px;
+    background: url(../images/sprite.png) no-repeat -59px -279px;
+    background-size: 104px auto;
+    margin: 5px;
+}
+
 .user {
     width: 44px;
     height: 44px;
