--- a/h5+c3（2）/携程网首页案例制作/css/index.css
+++ b/h5+c3（2）/携程网首页案例制作/css/index.css
@@ -85,3 +85,10 @@ div {
 .focus img{
     width: 100%;
 }
+
+.local-nav {
+    height: 64px;
+    background-color: #fff;
+    margin: 3px 4px;
+    border-radius: 8px;
+}
