--- a/h5+c3（2）/携程网首页案例制作/css/index.css
+++ b/h5+c3（2）/携程网首页案例制作/css/index.css
@@ -112,10 +112,26 @@ ul {
     font-size: 12px;
 }
 
-.local-nav-icon {
+.local-nav li [class^="local-nav-icon"] {
     width: 32px;
     height: 32px;
     margin-top: 8px;
     background: url(../images/localnav_bg.png) no-repeat 0 0;
     background-size: 32px auto;
+}
+
+.local-nav li .local-nav-icon-icon2 {
+    background-position: 0 -32px;
+}
+
+.local-nav li .local-nav-icon-icon3 {
+    background-position: 0 -64px;
+}
+
+.local-nav li .local-nav-icon-icon4 {
+    background-position: 0 -96px;
+}
+
+.local-nav li .local-nav-icon-icon5 {
+    background-position: 0 -128px;
 }
