a2.63（携程网首页案例——第四行主导航子盒子布局）

--- a/h5+c3（2）/携程网首页案例制作/css/index.css
+++ b/h5+c3（2）/携程网首页案例制作/css/index.css
@@ -143,10 +143,19 @@ nav {
 }
 
 .nav-common {
+    display: flex;
     height: 88px;
     background-color: pink;
 }
 
 .nav-common:nth-child(2) {
     margin: 3px 0;
+}
+
+.nav-items {
+    flex: 1;
+}
+
+.nav-items:nth-child(-n+2) {
+    border-right: 1px solid #fff;
 }
