--- a/h5+c3（2）/携程网首页案例制作/css/index.css
+++ b/h5+c3（2）/携程网首页案例制作/css/index.css
@@ -173,6 +173,8 @@ nav {
 
 .nav-items:nth-child(1) a {
     border: 0;
+    background: url(../images/hotel.png) no-repeat bottom center;
+    background-size: 121px auto;
 }
 
 .nav-items:nth-child(-n+2) {
