a2.70（携程网首页案例——第六行外部大盒子布局）

--- a/h5+c3（2）/携程网首页案例制作/css/index.css
+++ b/h5+c3（2）/携程网首页案例制作/css/index.css
@@ -269,3 +269,9 @@ nav {
 .subnav-entry li .subnav-entry-icon-icon10 {
     background-position: 0 -252px;
 }
+
+.sales-box {
+    border-top: 1px solid #ccc;
+    background-color: #fff;
+    margin: 4px;
+}
