a2.73（携程网首页案例——完成第6行样式）

--- a/h5+c3（2）/携程网首页案例制作/css/index.css
+++ b/h5+c3（2）/携程网首页案例制作/css/index.css
@@ -7,7 +7,7 @@ body {
     background: #f2f2f2;
     overflow-x: hidden;
     -webkit-tap-highlight-color: transparent;
-    height: 2000px;
+    /*height: 2000px;*/
 }
 
 a {
@@ -319,4 +319,21 @@ nav {
     border-top: 2px solid #fff;
     border-right: 2px solid #fff;
     transform: rotate(45deg);
+}
+
+.row {
+    display: flex;
+}
+
+.row a {
+    flex:1;
+    border-bottom: 1px solid #eee;
+}
+
+.row a:nth-child(1) {
+    border-right: 1px solid #eee;
+}
+
+.row a img {
+    width: 100%;
 }
